# ByteBrain

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
bytebrain/: __init__.py  __main__.py
bytebrain/core/: __init__.py  agent.py  rag.py  workflow.py
bytebrain/guardrails/: __init__.py  behavior_guard.py  input_guard.py  output_guard.py
bytebrain/prompts/: __init__.py
bytebrain/prompts/skill/: code_coaching.md  concept_explanation.md  knowledge_retrieval.md
bytebrain/prompts/system/: system_prompt.md
bytebrain/skills/: __init__.py
bytebrain/skills/code_coaching/: SKILL.md  skill.py
bytebrain/skills/concept_explanation/: SKILL.md  skill.py
bytebrain/skills/exercise_generation/: SKILL.md  skill.py
bytebrain/skills/knowledge_retrieval/: SKILL.md  skill.py
bytebrain/ui/: __init__.py  streamlit_app.py
bytebrain/utils/: __init__.py  config.py
docs/: API.md  ARCHITECTURE_CHECK.md  DESIGN_PHILOSOPHY.md  IMPLEMENTATION_GUIDE.md  NEEDS_ANALYSIS_2026.md  NORMALIZATION_PLAN.md  NORMALIZATION_SUMMARY.md  PHILOSOPHY.md  PRODUCT_FEATURES.md  PROJECT_PLAN.md  PROJECT_POSITIONING.md  PROJECT_STRUCTURE.md  README.md  SKILL_PROMPT_GUARDRAILS_2026.md  TECH_PLAYGROUND_2026.md
docs/archive/: AI_AGENT_STRATEGY.md
docs/developer/: API.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  KNOWLEDGE_BASE_GUIDELINE.md  TESTING.md
docs/examples/: README.md  basic_usage.py  code_coaching.py  concept_explanation.py
docs/guide/: DEVELOPMENT.md  GETTING_STARTED.md
docs/user/: FAQ.md  GETTING_STARTED.md  TUTORIAL.md
examples/: quickstart.py
src/core/: __init__.py
src/data/: __init__.py
src/ui/: __init__.py
src/utils/: config.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py
